--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 
-</head>
+<style type="text/css">.fancybox-margin{margin-right:17px;}</style></head>
 
  <body>
   <!-- _partial/navigation -->
@@ -55,7 +55,7 @@
         <span class="icon-bar"></span>
       </button>
 	  <a class="navbar-brand" href="/">PVZ2 PAK｜疾电材质包</a>
-      <div class="collapse navbar-collapse nav-menu collapse in" style="height: auto;">
+      <div class="navbar-collapse nav-menu collapse in" style="height: auto;">
 		<ul class="nav navbar-nav">
 		  
 		  <li>
