--- a/index.html
+++ b/index.html
@@ -222,6 +222,23 @@
   &copy; 2018 by Royal's Team
   </span>
 
+  </div> <!-- container-narrow -->
+  <!-- _partial/after_footer -->
+<a id="gotop" href="https://rime.im/#">
+  <span>▲</span>
+</a>
+
+<script src="./RIME _ 中州韻輸入法引擎_files/jquery.imagesloaded.min.js.下载"></script>
+<script src="./RIME _ 中州韻輸入法引擎_files/gallery.js.下载"></script>
+<script src="./RIME _ 中州韻輸入法引擎_files/bootstrap.min.js.下载"></script>
+<script src="./RIME _ 中州韻輸入法引擎_files/main.js.下载"></script>
+<script src="./RIME _ 中州韻輸入法引擎_files/sidecar.v1.js.下载" async="" defer=""></script>
+
+
+
+
+
+
 <link rel="stylesheet" href="/fancybox/jquery.fancybox.css" media="screen" type="text/css">
 <script src="/fancybox/jquery.fancybox.pack.js"></script>
 <script type="text/javascript">
