--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
   <span>▲</span>
 </a>
 
-<script src="./RIME _ 中州韻輸入法引擎_files/jquery.imagesloaded.min.js.下载"></script>
-<script src="./RIME _ 中州韻輸入法引擎_files/gallery.js.下载"></script>
-<script src="./RIME _ 中州韻輸入法引擎_files/bootstrap.min.js.下载"></script>
-<script src="./RIME _ 中州韻輸入法引擎_files/main.js.下载"></script>
-<script src="./RIME _ 中州韻輸入法引擎_files/sidecar.v1.js.下载" async="" defer=""></script>
+<script src="/js/jquery.imagesloaded.min.js"></script>
+<script src="/js/gallery.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/main.js"></script>
+<script src="/s/sidecar.v1.js" async="" defer=""></script>
 
 
 
