--- a/index.html
+++ b/index.html
@@ -221,10 +221,11 @@
 <p>
   &copy; 2018 by Royal's Team
   </span>
+</p>
 
   </div> <!-- container-narrow -->
   <!-- _partial/after_footer -->
-<a id="gotop" href="https://rime.im/#">
+<a id="gotop" href="https://pvz2pak.github.io/#">
   <span>▲</span>
 </a>
 
@@ -232,7 +233,6 @@
 <script src="/js/gallery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/main.js"></script>
-<script src="/s/sidecar.v1.js" async="" defer=""></script>
 
 
 
