--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
  <body>
   <!-- _partial/navigation -->
-<nav id="main-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav id="main-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="opacity: auto;">
     <div class="container">
       <button type="button" class="navbar-header navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 		<span class="sr-only">Toggle navigation</span>
@@ -225,7 +225,7 @@
 
   </div> <!-- container-narrow -->
   <!-- _partial/after_footer -->
-<a id="gotop" href="https://pvz2pak.github.io/#">
+<a id="gotop" href="#" style="display: auto;">
   <span>▲</span>
 </a>
 
