--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
           </div>
         
           <div class="quote">
-            <div class="quote-header"><p>〔中州韻 QQ 羣〕P - 溝渠拼音：</p>
+            <div class="quote-header"><p>占位符占位符占位符：</p>
 </div>
-            <div class="quote-content"><p>新的一天开始了 又可以用心爱的rime写字了</p>
+            <div class="quote-content"><p>占位符占位符占位符占位符占位符占位符占位符</p>
 </div>
           </div>
         
           <div class="quote">
-            <div class="quote-header"><p>〔中州韻 QQ 羣〕Super - 五笔：</p>
+            <div class="quote-header"><p>占位符占位符占位符占位符占位符：</p>
 </div>
-            <div class="quote-content"><p>好吧，确实又激发了我打字的欲望，哈:D</p>
+            <div class="quote-content"><p>占位符占位符占位符占位符占位符占位符</p>
         </div>
       </div>
       <div class="right illustration"></div>
