--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 		  </li>
 		  
 		  <li>
-			<a href="http://cd-ctfs.ftn.qq.com/ftn_handler/470175f98e1a46ffe347ab001a2b8e0b227a33cbbeba611ddfe4c6e49175cf78546d6adc7b147b55dfc76393b701f43bc990507b4adee8fedd61a8cd28408f7d/动作文件修改库.zip" title="">
-			  <i class="fa fa-github"></i>动作
+			<a href="/code" title="">
+			  <i class="fa fa-code-fork"></i>动作
 			</a>
 		  </li>
 		  
@@ -126,7 +126,7 @@
     <a class="btn btn-lg btn-primary" href="https://pvz2pak.github.io/"><i class="fa fa-arrow-down"></i>下载材质包</a>
   </div>
   <div class="download">
-    <a class="btn btn-lg btn-default" href="http://cd-ctfs.ftn.qq.com/ftn_handler/470175f98e1a46ffe347ab001a2b8e0b227a33cbbeba611ddfe4c6e49175cf78546d6adc7b147b55dfc76393b701f43bc990507b4adee8fedd61a8cd28408f7d/动作文件修改库.zip"><i class="fa fa-code-fork"></i>下载动作包</a>
+    <a class="btn btn-lg btn-default" href="/code"><i class="fa fa-code-fork"></i>下载动作包</a>
   </div>
   <div class="footnote text-muted">
     支持 Windows XP ~ Windows 10
