--- a/QQ/index.html
+++ b/QQ/index.html
@@ -71,8 +71,8 @@
 		  </li>
 		  
 		  <li>
-			<a href="http://cd-ctfs.ftn.qq.com/ftn_handler/470175f98e1a46ffe347ab001a2b8e0b227a33cbbeba611ddfe4c6e49175cf78546d6adc7b147b55dfc76393b701f43bc990507b4adee8fedd61a8cd28408f7d/动作文件修改库.zip" title="">
-			  <i class="fa fa-github"></i>动作
+			<a href="/CODE" title="">
+			  <i class="fa fa-code-fork"></i>动作
 			</a>
 		  </li>
 		  
