--- a/QQ/index.html
+++ b/QQ/index.html
@@ -42,11 +42,11 @@
 
 
 
-</head>
+<style type="text/css">.fancybox-margin{margin-right:17px;}</style></head>
 
  <body>
   <!-- _partial/navigation -->
-<nav id="main-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav id="main-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="opacity: auto;">
     <div class="container">
       <button type="button" class="navbar-header navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 		<span class="sr-only">Toggle navigation</span>
@@ -140,12 +140,22 @@
   &copy; 2018 by Royal's Team
   </span>
 </p>
- </footer>
+
   </div> <!-- container-narrow -->
   <!-- _partial/after_footer -->
-<a id="gotop" href="#">
+<a id="gotop" href="#" style="display: auto;">
   <span>▲</span>
 </a>
+
+<script src="/js/jquery.imagesloaded.min.js"></script>
+<script src="/js/gallery.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/main.js"></script>
+
+
+
+
+
 
 <link rel="stylesheet" href="/fancybox/jquery.fancybox.css" media="screen" type="text/css">
 <script src="/fancybox/jquery.fancybox.pack.js"></script>
