--- a/QQ/index.html
+++ b/QQ/index.html
@@ -71,7 +71,7 @@
 		  </li>
 		  
 		  <li>
-			<a href="/CODE" title="">
+			<a href="/code" title="">
 			  <i class="fa fa-code-fork"></i>动作
 			</a>
 		  </li>
