--- a/code/index.html
+++ b/code/index.html
@@ -114,7 +114,7 @@
 	
   <!-- display as page -->
 		<div class="page-header">
-			<h1> <i class="fa fa-comments"></i>  动作源码｜PVZ2 PAK｜官方网站</h1>
+			<h1> <i class="fa fa-code-fork"></i>  动作源码｜PVZ2 PAK｜官方网站</h1>
 		</div>
 	
 
