--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   
-  <title>动作源码｜PVZ2 PAK｜官方网站</title>
+  <title>动作源文件｜PVZ2 PAK｜官方网站</title>
   
   <meta name="description" content="Le blog de la p2pak">
   
@@ -114,7 +114,7 @@
 	
   <!-- display as page -->
 		<div class="page-header">
-			<h1> <i class="fa fa-code-fork"></i>  动作源码｜PVZ2 PAK｜官方网站</h1>
+			<h1> <i class="fa fa-code-fork"></i>  动作源文件｜PVZ2 PAK｜官方网站</h1>
 		</div>
 	
 
