--- a/code/index.html
+++ b/code/index.html
@@ -131,7 +131,7 @@
 
 	<!-- content -->
 	<div class="mypage">
-	      <p>这里将会放的是经过PVZ2 pak制作人员允许后开源的 .fla 格式的动画文件。
+	      <p>这里将要放的是经过PVZ2 pak制作人员允许后开源的 .fla 格式的动画文件。
 <p>
   &copy; 2018 by Royal's Team
   </span>
