--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="quote">
             <div class="quote-header"><p>Mtohoem在QQ里说：</p>
 </div>
-            <div class="quote-content"><p>「关于这个，我觉得做的还是不错的，除了墓碑有点问题」</p>
+            <div class="quote-content"><p>「关于这个，我觉得做得还是不错的，除了墓碑有点问题」</p>
 </div>
           </div>
         
