--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<ul class="nav navbar-nav">
 		  
 		  <li>
-			<a href="https://pvz2pak.github.io/" title="">
+			<a href="/download" title="">
 			  <i class="fa fa-arrow-down"></i>下载
 			</a>
 		  </li>
@@ -111,19 +111,19 @@
       <!-- index -->
 <div class="downloads container">
   <div class="download os-windows hidden">
-    <a class="btn btn-lg btn-primary" href="https://pvz2pak.github.io/"><i class="fa fa-arrow-down"></i>下载材质包 </a>
+    <a class="btn btn-lg btn-primary" href="/download"><i class="fa fa-arrow-down"></i>下载材质包 </a>
   </div>
   <div class="download os-mac hidden">
-    <a class="btn btn-lg btn-primary" href="https://pvz2pak.github.io/"><i class="fa fa-arrow-down"></i>下载材质包 </a>
+    <a class="btn btn-lg btn-primary" href="/download"><i class="fa fa-arrow-down"></i>下载材质包 </a>
   </div>
   <div class="download os-linux hidden">
-    <a class="btn btn-lg btn-primary" href="https://pvz2pak.github.io/"><i class="fa fa-arrow-down"></i>下载材质包</a>
+    <a class="btn btn-lg btn-primary" href="/download"><i class="fa fa-arrow-down"></i>下载材质包</a>
   </div>
   <div class="download os-ios hidden">
-    <a class="btn btn-lg btn-primary" href="https://pvz2pak.github.io/"><i class="fa fa-arrow-down"></i>下载材质包</a>
+    <a class="btn btn-lg btn-primary" href="/download"><i class="fa fa-arrow-down"></i>下载材质包</a>
   </div>
   <div class="download os-unknown">
-    <a class="btn btn-lg btn-primary" href="https://pvz2pak.github.io/"><i class="fa fa-arrow-down"></i>下载材质包</a>
+    <a class="btn btn-lg btn-primary" href="/download"><i class="fa fa-arrow-down"></i>下载材质包</a>
   </div>
   <div class="download">
     <a class="btn btn-lg btn-default" href="/code"><i class="fa fa-code-fork"></i>下载动作包</a>
@@ -208,7 +208,7 @@
 </div>
 <div class="finale container">
   <div class="download">
-    <a class="btn btn-lg btn-primary" href="https://pvz2pak.github.io/"><i class="fa fa-arrow-down"></i>下载材质包</a>
+    <a class="btn btn-lg btn-primary" href="/download"><i class="fa fa-arrow-down"></i>下载材质包</a>
   </div>
   <p>铁杆粉？您可以通过到<a href="https://tieba.baidu.com/f?kw=pvz2%E7%B4%A0%E6%9D%90&fr=index">这里</a>顶贴，支持开发者为PVZ2 pak投入更大的努力。</p>
 </div>
