--- a/download/index.html
+++ b/download/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   
-  <title>下载和安装｜PVZ2 PAK｜官方网站</title>
+  <title>下载｜PVZ2 PAK｜官方网站</title>
   
   <meta name="description" content="Le blog de la p2pak">
   
@@ -114,7 +114,7 @@
 	
   <!-- display as page -->
 		<div class="page-header">
-			<h1> <i class="fa fa-download"></i>  下载和安装｜PVZ2 PAK｜官方网站</h1>
+			<h1> <i class="fa fa-download"></i>  下载｜PVZ2 PAK｜官方网站</h1>
 		</div>
 	
 
